fix: adjust font size for article title for better visibility

--- a/source/css/_page/article.styl
+++ b/source/css/_page/article.styl
@@ -51,6 +51,7 @@ article
     color var(--theme-text-light)
     margin 0
     padding 15px 0 0 0
+    font-size 1.5em
   @media ( min-width 769px )
     &:hover
       color var(--theme-text-hover)
